# veo

./: .gitignore  DEPLOYMENT.md  README.md  barem_gemini.json  candidate_matching_task.json  candidate_matching_task.md  document_analysis_task.json  document_analysis_task.md  extracted_Mohamed_Ali_Ben_Salah_CV.txt  extracted_alaeddine-selmi-cv.txt  extracted_arwa-lassoued-cv.txt  extracted_baha-kahri-cv.txt  extracted_baha-khemiri-cv.txt  extracted_ferchichi-mehdi-cv.txt  extracted_ghassen-bouzayen-cv.txt  extracted_imen-zarai-cv.txt  extracted_kais-garci-cv.txt  extracted_lamia-cherni-cv.txt  extracted_mahdi-abdelhedi-cv.txt  extracted_mohamed-gharghari-el-ayech-cv.txt  extracted_rim-jamli-cv.txt  extracted_safa-ochi-cv.txt  file  packages.txt  pyproject-old.toml  pyproject.toml  report.json  report_Mohamed_Ali_Ben_Salah_CV.md  report_alaeddine-selmi-cv.md  report_arwa-lassoued-cv.md  report_arwa_lassoued.json  report_baha-kahri-cv.md  report_baha-khemiri-cv.md  report_ferchichi-mehdi-cv.md  report_ghassen-bouzayen-cv.md  report_imen-zarai-cv.md  report_kais-garci-cv.md  report_kais_garci.json  report_lamia-cherni-cv.md  report_mahdi-abdelhedi-cv.md  (+21 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
db/: chroma.sqlite3
output/: batch_analysis_20250709_095754.md  batch_analysis_20250709_100530.md  batch_analysis_20250709_100825.md  batch_analysis_20250709_101132.md  batch_analysis_20250709_101457.md  batch_analysis_20250709_102733.md  batch_analysis_20250709_103311.md  batch_analysis_20250709_104156.md  batch_analysis_20250709_104419.md  (+15 more)
(+46 files in other folders)
