[project]
name = "resume"
version = "0.1.0"
description = "VEO Resume Analyzer - Streamlit Cloud Compatible"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.45.1",
    "PyPDF2>=3.0.1",
    "google-genai>=1.16.1",
    "python-dotenv>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
